--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject AuthenticationService AuthService
+@rendermode InteractiveServer
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">NL2SQL_Blazor</a>
     </div>
@@ -20,11 +23,14 @@
             </NavLink>
         </div>
 
-      @*   <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div> *@
+        @if (AuthService.CurrentUsername == "admin")
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Users">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users List
+                </NavLink>
+            </div>
+        }
     </nav>
 </div>
 
