--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -19,7 +19,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Nl-to-sql">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> NL to SQL
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> NLQuery Engine
             </NavLink>
         </div>
 
