--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -27,7 +27,7 @@
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Users">
-                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users List
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Configuration
                 </NavLink>
             </div>
         }
