--- a/Components/Pages/User.razor
+++ b/Components/Pages/User.razor
@@ -20,8 +20,8 @@ else
         <thead>
             <tr>
                 <th>User ID</th>
-                <th>Username</th>
-                <th>ProductName</th>
+                <th>User Name</th>
+                <th>Product Name</th>
             </tr>
         </thead>
         <tbody>
